vlib/v/checker/tests/template_call_position.vv
module main

fn main() {
	$tmpl('template_call_position_test.txt')
}
